-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 17, 18
-
Component/s: hotspot
-
b13
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8310564 | 17.0.9 | William Kemper | P4 | Resolved | Fixed | b01 |
The test gc/stringdedup/TestStringDeduplicationInterned.java fails when run with Shenandoah as the GC. (Shenandoah is currently not in the `@requires` list of supported collectors for this test, to disable running this test until this issue has been dealt with.)
Snippet from the log is
End: Full GC 3/3
Waiting for deduplication...
[10.468s][info ][gc ] Cancelling GC: Stopping VM
];
stderr: [Exception in thread "main" java.lang.RuntimeException: Deduplication has not occurred
at gc.stringdedup.TestStringDeduplicationTools$InternedTest.main(TestStringDeduplicationTools.java:297)
This may be a testbug rather than an issue with Shenandoah.
Snippet from the log is
End: Full GC 3/3
Waiting for deduplication...
[10.468s][info ][gc ] Cancelling GC: Stopping VM
];
stderr: [Exception in thread "main" java.lang.RuntimeException: Deduplication has not occurred
at gc.stringdedup.TestStringDeduplicationTools$InternedTest.main(TestStringDeduplicationTools.java:297)
This may be a testbug rather than an issue with Shenandoah.
- backported by
-
JDK-8310564 gc/stringdedup/TestStringDeduplicationInterned.java fails with Shenandoah
-
- Resolved
-
- relates to
-
JDK-8271834 TestStringDeduplicationAgeThreshold intermittent failures on Shenandoah
-
- Resolved
-
-
JDK-8254598 StringDedupTable should use OopStorage
-
- Resolved
-
- links to
-
Commit
openjdk/jdk17u-dev/9a496989
-
Commit
openjdk/jdk/7212561d
-
Review
openjdk/jdk17u-dev/1447
-
Review
openjdk/jdk/5151
(2 links to)