8267188: gc/stringdedup/TestStringDeduplicationInterned.java fails with Shenandoah

Reviewed-by: phh, shade
Backport-of: 7212561dd1ec65d7f31792959f0eaaab6229eaf4